# brain-tumor-classifier-render

./: .gitignore  DEPLOY.md  README.md  README_backend_patch.txt  app.py  config.py  gradcam.py  predict.py  pyproject.toml  render.yaml  requirements.txt  setup.py  test_predict.sh  upload_model.sh
notebooks/: brain_tumor_classifier_render.ipynb
src/app/: __init__.py
src/app/templates/: index.html
templates/: index.html
